
[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
# common dependencies
anyhow = "1.0.99"
futures = "0.3.31"
paste = "1.0.15"
take_mut = "0.2.2"
async-compat = "0.2.5"
tokio = { version = "1.23", features = ["full"] }
snafu = "0.8"

# Arrow Ecosystem
arrow = "56.2.0"
arrow-array = {version = "56.2.0", features = ["ffi"]}
arrow-data = {version = "56.2.0", features = ["ffi"]}
arrow-schema = "56.2.0"

# Vortex Ecosystem
# Actual version is 0.56.0, but set to 0.1.0 to match the patched source in _vortex_patched/
vortex = { version = "0.1.0", features = ["tokio"] }

# Lance Ecosystem
lance = "1.0.0"
lance-encoding = "1.0.0"
lance-index = "1.0.0"
# `oss` feature activates lance-io's stock OssStoreProvider (registered against
# the `oss://` scheme) plus `opendal/services-oss`. Our AliyunOssStoreProvider
# overrides stock only when per-tenant `oss_role_arn` is present; single-tenant
# env-driven OSS continues to go through stock.
lance-io = { version = "1.0.0", features = ["oss"] }
lance-table = "1.0.0"

# OSS backend for the AliyunOssStoreProvider in src/aliyun_oss_provider.rs.
# Pinned to the same version lance-io 1.0.0 resolves transitively, so we don't
# end up with two copies of opendal in the build graph. `services-oss` is the
# only service this module uses; reqsign handles AssumeRoleWithOIDC internally.
opendal = { version = "0.55", features = ["services-oss"] }
object_store_opendal = "0.55"

# Iceberg Ecosystem
bytes = "1"
iceberg = { version = "0.8", features = ["storage-azdls", "storage-gcs"] }
parquet = { version = "56.2.0", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }

# AWS SDK (for Lance AssumeRole credential provider)
aws-config = "1"
aws-credential-types = "1"
object_store = { version = "0.12", features = ["aws", "gcp"] }

# HTTP client for the GCP Service Account Impersonation flow in
# gcp_impersonation.rs (calls metadata.google.internal + iamcredentials.googleapis.com).
# Already in the transitive tree via lance-io / iceberg / reqsign; pinned here
# to match those (0.12.x) and to opt into rustls (the workspace TLS choice).
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# `url::Url` is named in lance-io's ObjectStoreProvider::new_store signature
# we implement; keep as a direct dep rather than leaning on transitive re-export.
url = "2"

# Crypto + encoding for Aliyun POP v1 signing in aliyun_oss_provider.rs
# (ECS IMDS → sts:AssumeRole fallback when OIDC machine identity is absent).
# All three are already in the transitive graph via reqsign / aws SDKs;
# pin versions to match so we don't add duplicate copies.
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# CXX bridge
cxx = "1.0.184"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cxx-build = "1.0.184"

[patch.crates-io]
vortex = { path = "_vortex_patched/vortex" }
vortex-io = { path = "_vortex_patched/vortex-io" }
vortex-array = { path = "_vortex_patched/vortex-array" }
vortex-file = { path = "_vortex_patched/vortex-file" }
vortex-layout = { path = "_vortex_patched/vortex-layout" }
vortex-scan = { path = "_vortex_patched/vortex-scan" }
vortex-alp = { path = "_vortex_patched/encodings/alp" }
vortex-bytebool = { path = "_vortex_patched/encodings/bytebool" }
vortex-datetime-parts = { path = "_vortex_patched/encodings/datetime-parts" }
vortex-decimal-byte-parts = { path = "_vortex_patched/encodings/decimal-byte-parts" }
vortex-fastlanes = { path = "_vortex_patched/encodings/fastlanes" }
vortex-sequence = { path = "_vortex_patched/encodings/sequence" }
vortex-zigzag = { path = "_vortex_patched/encodings/zigzag" }
