
[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[features]
io-trace = []
s3-crt-async = []

[dependencies]
# common dependencies
anyhow = "1.0.99"
futures = "0.3.31"
paste = "1.0.15"
take_mut = "0.2.2"
async-compat = "0.2.5"
async-stream = "0.3"
tokio = { version = "1.23", features = ["full"] }
snafu = "0.9"

# Arrow Ecosystem
arrow = "56.2.0"
arrow-array = {version = "56.2.0", features = ["ffi"]}
arrow-data = {version = "56.2.0", features = ["ffi"]}
arrow-schema = "56.2.0"

# Lance 7 uses Arrow 58 while Vortex and Iceberg still use Arrow 56. Keep both
# versions explicit and bridge them independently through Arrow's C Data API.
arrow58 = { package = "arrow", version = "58.0.0" }
arrow-array58 = { package = "arrow-array", version = "58.0.0", features = ["ffi"] }
arrow-schema58 = { package = "arrow-schema", version = "58.0.0" }

# Vortex Ecosystem
# Actual version is 0.56.0, but set to 0.1.0 to match the patched source in _vortex_patched/
vortex = { version = "0.1.0", features = ["tokio"] }

# Lance Ecosystem
lance = { version = "=7.0.0", default-features = false, features = ["aws", "azure", "gcp", "oss"] }
lance-core = "=7.0.0"
lance-encoding = "=7.0.0"
lance-file = "=7.0.0"
lance-index = "=7.0.0"
# `oss` feature activates lance-io's stock OssStoreProvider (registered against
# the `oss://` scheme) plus `opendal/services-oss`. Our AliyunOssStoreProvider
# overrides stock only when per-tenant `oss_role_arn` is present; single-tenant
# env-driven OSS continues to go through stock.
lance-io = { version = "=7.0.0", default-features = false, features = ["aws", "azure", "gcp", "oss"] }
lance-table = "=7.0.0"

# OSS backend for the AliyunOssStoreProvider in src/aliyun_oss_provider.rs.
# Match the opendal version used by lance-io 7.0.0 so this provider does not
# add another copy beyond Lance's 0.56 and Iceberg's existing 0.55. `services-oss`
# is the only service this module uses; this project handles the two-step Aliyun
# role_arn credential flow before handing static STS creds to opendal.
opendal = { version = "0.56", features = ["services-oss"] }
object_store_opendal = "0.56"

# Iceberg Ecosystem
# iceberg 0.9 moved the opendal-backed storage implementations (s3/gcs/azdls/oss)
# out of the core crate into a separate `iceberg-storage-opendal` crate. We enable
# s3/gcs/azdls there, but deliberately NOT oss — OSS is handled by our own
# `AliyunOssStorageFactory` in aliyun_oss_provider.rs so we can forward per-tenant
# role_arn (OIDC) + the ECS-IMDS RAM flow, neither of which upstream's `OssConfig`
# supports (it only accepts endpoint/AK/SK).
bytes = "1"
iceberg = "0.9"
iceberg-storage-opendal = { version = "0.9", features = ["opendal-s3", "opendal-gcs", "opendal-azdls"] }
# Required for #[typetag::serde] on our custom Storage/StorageFactory impls that
# plug into iceberg's FileIO pipeline. Pinned to match iceberg-storage-opendal's
# own typetag dep so we don't end up with two typetag copies.
typetag = "0.2"
parquet = { version = "56.2.0", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }

# AWS SDK (for Lance AssumeRole credential provider)
aws-config = "1"
aws-credential-types = "1"
object_store = { version = "0.13", features = ["aws", "gcp"] }

# HTTP client for the GCP Service Account Impersonation flow in
# gcp_impersonation.rs (calls metadata.google.internal + iamcredentials.googleapis.com).
# Already in the transitive tree via lance-io / iceberg / reqsign; pinned here
# to match those (0.12.x) and to opt into rustls (the workspace TLS choice).
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# `url::Url` is named in lance-io's ObjectStoreProvider::new_store signature
# we implement; keep as a direct dep rather than leaning on transitive re-export.
url = "2"

# Crypto + encoding for Aliyun POP v1 signing in aliyun_oss_provider.rs
# (ECS IMDS → sts:AssumeRole fallback when OIDC machine identity is absent).
# All three are already in the transitive graph via reqsign / aws SDKs;
# pin versions to match so we don't add duplicate copies.
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# SQL predicate parsing
sqlparser = "0.55"

# CXX bridge
cxx = "1.0.184"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cxx-build = "1.0.184"

[patch.crates-io]
vortex = { path = "_vortex_patched/vortex" }
vortex-io = { path = "_vortex_patched/vortex-io" }
vortex-array = { path = "_vortex_patched/vortex-array" }
vortex-file = { path = "_vortex_patched/vortex-file" }
vortex-layout = { path = "_vortex_patched/vortex-layout" }
vortex-scan = { path = "_vortex_patched/vortex-scan" }
vortex-alp = { path = "_vortex_patched/encodings/alp" }
vortex-bytebool = { path = "_vortex_patched/encodings/bytebool" }
vortex-datetime-parts = { path = "_vortex_patched/encodings/datetime-parts" }
vortex-decimal-byte-parts = { path = "_vortex_patched/encodings/decimal-byte-parts" }
vortex-fastlanes = { path = "_vortex_patched/encodings/fastlanes" }
vortex-sequence = { path = "_vortex_patched/encodings/sequence" }
vortex-zigzag = { path = "_vortex_patched/encodings/zigzag" }
